updare authentification and tax calc